still trying mobile optim

--- a/index.html
+++ b/index.html
@@ -117,8 +117,23 @@
         Your browser does not support the video tag.
       </video>
     </div>
-
     <div class="main-inner">
+      <!--
+      <div class="main-text-wrapper">
+      <div class="main-text">We are a premium design lab.</div>
+        
+      <a href="inquiry.html">
+        <button class="home-main-btn">
+          Services
+          <span class="inquiry-arrow">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round" class="arrow-icon">
+              <path d="M7 17L17 7" />
+              <path d="M7 7h10v10" />
+            </svg>
+          </span>
+        </button></a>
+</div>-->
       <div class="section-main">
         <div class="section1">
           <!--<div class="title1">FULL STACK WEB DEVELOPERS<br>BASED IN HOUSTON, TX</div>-->
