--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
   <!--DROPDOWN MENU-->
 <div class="dropdown-menu" id="navDropdown">
-  <!--
+  
    <div class="dropdown-video-bg">
     <video autoplay muted loop playsinline>
       <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//sphere6.mp4" type="video/mp4" />
     </video>
-  </div>-->
+  </div>
 
   <div class="dropdown-content">
   <button class="close-menu" id="closeMenu">×</button>
