button for services cards

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       <div class="card-text2">+ Branding<br>+ Website & E-commerce<br>+ Mobile & Web App<br>+ User Experience</div>
       <hr class="card-divider">
       <a href="inquiry.html">
-        <button class="navbar__inquiry">
+        <button class="button-design">
           Learn More
           <span class="inquiry-arrow">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -290,7 +290,7 @@
       <div class="card-text2">+ Mobile & Web Apps<br>+ Web Development<br>+ Cross-Platform<br>+ Embedded Software</div>
       <hr class="card-divider">
       <a href="inquiry.html">
-        <button class="navbar__inquiry">
+        <button class="button-design">
           Learn More
           <span class="inquiry-arrow">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -308,7 +308,7 @@
       <div class="card-text2">+ Scoping<br>+ Consulting<br>+ Management<br>+ Support</div>
       <hr class="card-divider">
       <a href="inquiry.html">
-        <button class="navbar__inquiry">
+        <button class="button-design">
           Learn More
           <span class="inquiry-arrow">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
