beautiful mobile edit

--- a/index.html
+++ b/index.html
@@ -151,6 +151,20 @@
             </div>
           </div>
         </div>
+
+        <div class="large-text2"><p>Houston Based Design Lab.</p></div>
+
+        <a href="inquiry.html">
+        <button class="button-design2">
+          See More
+          <span class="inquiry-arrow2">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round" class="arrow-icon">
+              <path d="M7 17L17 7" />
+              <path d="M7 7h10v10" />
+            </svg>
+          </span>
+        </button></a>
       </div>
     </div>
     
