beautiful mobile edit 5

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           </div>
         </div>
 
-        <div class="large-text2"><p>Houston Based Design Lab.</p></div>
+        <div class="large-text2"><p>We are a Design Lab. <br>— Based in Houston, TX</p></div>
 
         <a href="inquiry.html">
         <button class="button-design2">
