scroll text wrapper 3

--- a/index.html
+++ b/index.html
@@ -346,6 +346,28 @@ section.spacer-bottom {
     height: 30vh;
     margin-bottom: 5rem;
   }
+  .scroll-text-section {
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  overflow: hidden;
+  cursor: grab;
+  position: relative;
+  width: 100vw;
+  background: #000;
+  margin-bottom: 0.5rem;
+}
+section.spacer-top {
+  border-bottom: 2px solid #ffffff;
+  margin-top: 6rem;
+}
+
+section.spacer-bottom {
+  border-top: 2px solid #ffffff;
+  margin-bottom: 4rem;
+}
+
 }
 </style>
 <script>
