inquiry page mobile update

--- a/inquiry.html
+++ b/inquiry.html
@@ -159,7 +159,7 @@
                 </div>
             </form>
 
-            <button class="navbar__inquiry">
+            <button class="navbar__inquiry2">
             Send Inquiry
             <span class="inquiry-arrow">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
