--- a/services.html
+++ b/services.html
@@ -249,6 +249,8 @@
     .circle-container {
       width: 70vmin;
       height: 70vmin;
+      opacity: 0;
+  position: fixed;
     }
 
     .text-layer {
@@ -739,6 +741,8 @@ ScrollTrigger.create({
 }
 });
 </script>
+
+
 <script src="app.js"></script>
 </body>
 </html>
