--- a/services.html
+++ b/services.html
@@ -552,7 +552,7 @@ window.addEventListener("load", () => {
   </section>
 
   
-  <!-- After -->
+  <!-- 
   <section class="scroll-text-section" id="scrollContainer">
     <div class="scroll-track" id="scrollTrack">
       <div class="scroll-text" id="scrollText">
@@ -609,7 +609,7 @@ window.addEventListener("load", () => {
       });
     });
   });
-</script>
+</script>-->
 
   <!-- GSAP -->
 <script>
