--- a/work.html
+++ b/work.html
@@ -128,10 +128,10 @@
 <div class="card1">
   <div class="card1-content">
     <div class="card1-img">
-      <img src="images/artboard1.jpg" alt="Image" />
+      <img src="images/Artboard 6.jpg" alt="Image" />
     </div>
     <div class="card1-txt">
-      <h2>Unico Communications</h2>
+      <h2>Event Branding</h2>
       <!--<p>This is your supporting text. It will now align under the image.</p>-->
     </div>
   </div>
@@ -140,10 +140,10 @@
 <div class="card1">
   <div class="card1-content">
     <div class="card1-img">
-      <img src="images/artboard2.jpg" alt="Image" />
+      <img src="images/Artboard 8.jpg" alt="Image" />
     </div>
     <div class="card1-txt">
-      <h2>The New Teacher Project</h2>
+      <h2>Menus & Brochures</h2>
       <!--<p>This is your supporting text. It will now align under the image.</p>-->
     </div>
   </div>
@@ -152,10 +152,10 @@
 <div class="card1">
   <div class="card1-content">
     <div class="card1-img">
-      <img src="images/artboard3.jpg" alt="Image" />
+      <img src="images/Artboard 7.jpg" alt="Image" />
     </div>
     <div class="card1-txt">
-      <h2>The New Teacher Project 3</h2>
+      <h2>Advertising & Marketing</h2>
       <!--<p>This is your supporting text. It will now align under the image.</p>-->
     </div>
   </div>
@@ -164,10 +164,10 @@
 <div class="card1">
   <div class="card1-content">
     <div class="card1-img">
-      <img src="images/artboard4.jpg" alt="Image" />
+      <img src="images/Artboard 15.jpg" alt="Image" />
     </div>
     <div class="card1-txt">
-      <h2>United States Hispanic Chamber of Commerce</h2>
+      <h2>Product Branding & Packaging</h2>
       <!--<p>This is your supporting text. It will now align under the image.</p>-->
     </div>
   </div>
@@ -176,10 +176,10 @@
 <div class="card1">
   <div class="card1-content">
     <div class="card1-img">
-      <img src="images/productlabel5.jpg" alt="Image" />
+      <img src="images/Artboard 9.jpg" alt="Image" />
     </div>
     <div class="card1-txt">
-      <h2>Envi Personal Care</h2>
+      <h2>Design on Cans & Cannisters</h2>
       <!--<p>This is your supporting text. It will now align under the image.</p>-->
     </div>
   </div>
@@ -188,10 +188,10 @@
 <div class="card1">
   <div class="card1-content">
     <div class="card1-img">
-      <img src="images/productlabel6.jpg" alt="Image" />
+      <img src="images/Artboard 12.jpg" alt="Image" />
     </div>
     <div class="card1-txt">
-      <h2>Envi Hair Products</h2>
+      <h2>Logos & Photography</h2>
       <!--<p>This is your supporting text. It will now align under the image.</p>-->
     </div>
   </div>
@@ -455,7 +455,7 @@ body {
 
 .card1 {
   min-height: auto;
-  padding: 5vh 0;
+  padding: 2vh 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -467,13 +467,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start; /* ✅ aligns text left inside container */
-  gap: 2rem;
+  gap: 0.5rem;
 }
 
 .card1-img {
   width: 100%;
   height: 50vh;
-  border-radius: 40px;
+  border-radius: 1rem;
   overflow: hidden;
   box-shadow: 0 20px 60px rgba(0, 0, 0, 0.2);
   transition: box-shadow 0.3s ease;
@@ -501,7 +501,7 @@ body {
   width: 100%; /* ✅ match container */
   font-size: 1.2rem;
   z-index: 1;
-  text-align: center;
+  text-align: left;
 }
 
 }
