logo and text fix

--- a/work.html
+++ b/work.html
@@ -389,7 +389,7 @@ body {
   z-index: 1;
 }
 .logo2 {
-    transform: scale(0.2); /* Shrinks image to 80% size */
+    transform: scale(0.3); /* Shrinks image to 80% size */
     width:20px;
     height:auto;
   }
@@ -432,6 +432,11 @@ body {
   transform-style: preserve-3d;
   align-items: center;
 }
+.logo2 {
+    transform: scale(0.2); /* Shrinks image to 80% size */
+    width:20px;
+    height:auto;
+  }
 
 .logo-container img {
   width: 1700px;
