--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ function initScrollTrack() {
 <div class="footer">
   <div class="footer-container">
     <div class="footer-header">
-      <h2 class="chat-link"><a href="/contact" class="footer-link">Let's chat. →</a></h2>
+      <h2 class="chat-link"><a href="/inquiry.html" class="footer-link">Let's chat. →</a></h2>
       <p>Branding and website creation.</p>
       <p>Copyright © 2025</p>
     </div>
