--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smooth Scroll Confined Ring with Paragraphs</title>
+  <title>Our Services</title>
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css"/>
   <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
