mobile video cards

--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@
           <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//shandys.mov" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
+
+        <video class="video-mobile" autoplay muted loop playsinline>
+          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//shandysmr.mov" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
         <div class="card-label">Shandy's Heights</div>
         <div class="label-group bottom-left">
           <div class="card-label dark-label">Branding</div>
@@ -214,6 +219,11 @@
       <div class="image-card">
         <video class="ot-video" autoplay muted loop playsinline>
           <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//otvideo.mov" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+
+        <video class="video-mobile" autoplay muted loop playsinline>
+          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//otvideomr.mov" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <div class="card-label">Oleumfield</div>
@@ -229,6 +239,10 @@
           <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos/magnaflow.mov" type="video/mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
+        <video class="video-mobile" autoplay muted loop playsinline>
+          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//magnaflowmr.mov" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
         <div class="card-label">Magna-Flow</div>
         <div class="label-group bottom-left">
           <div class="card-label dark-label">Branding</div>
@@ -239,6 +253,11 @@
 
       <div class="image-card">
         <video class="ot-video" autoplay muted loop playsinline>
+          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//unico.mov" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+
+        <video class="video-mobile" autoplay muted loop playsinline>
           <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//unico.mov" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
@@ -255,7 +274,12 @@
           <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//royalty.mov" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
-        <div class="card-label">Unico Communications</div>
+
+         <video class="video-mobile" autoplay muted loop playsinline>
+          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//royaltymr.mov" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+        <div class="card-label">Royalty Insurance</div>
         <div class="label-group bottom-left">
           <div class="card-label dark-label">Branding</div>
           <div class="card-label dark-label">Web Design</div>
