royalty video mobile test

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         </video>
 
          <video class="video-mobile" autoplay muted loop playsinline>
-          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//royaltymr.mov" type="video/mp4" />
+          <source src="https://vmqlladebjzniwevemsg.supabase.co/storage/v1/object/public/videos//Royalty%209x16.mov" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <div class="card-label">Royalty Insurance</div>
