seo/google option on form inquiry

--- a/inquiry.html
+++ b/inquiry.html
@@ -150,7 +150,7 @@
   </label>
   <label class="radio-option">
     <input type="checkbox" name="projectScope[]" value="Business Cards">
-    Business Cards
+    SEO/Google
   </label>
   <label class="radio-option">
     <input type="checkbox" name="projectScope[]" value="Videography">
